--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
             z-index: 1;
         }
 
+        /* Formattazione scritta "FORMÆFFIMERA" (riferimento originale) */
         .fromaeffimera-text {
             font-family: 'Inter', sans-serif;
             font-weight: 400;
             font-size: 250pt;
             color: black !important;
             text-transform: uppercase;
-            line-height: 250pt; /* Interlinea ridotta per desktop */
             white-space: normal;
+            line-height: normal; /* Imposta l'interlinea automatica */
         }
 
         /* Modifica per tablet */
