--- a/index.html
+++ b/index.html
@@ -7,21 +7,7 @@
     <link rel="icon" href="img/icon.png" type="image/png">
     <link rel="stylesheet" href="cssfonts/fontstyles.css">
     <style>
-        /* Importa i font */
-        @font-face {
-            font-family: 'Courier Prime Bold';
-            src: url('fonts/CourierPrime-Bold.ttf') format('truetype');
-            font-weight: bold;
-            font-style: normal;
-        }
-        @font-face {
-            font-family: 'Courier Prime Regular';
-            src: url('fonts/CourierPrime-Regular.ttf') format('truetype');
-            font-weight: normal;
-            font-style: normal;
-        }
-
-        /* Video di sfondo */
+        /* Stili per il video di sfondo */
         .background-video {
             position: fixed;
             top: 0;
@@ -32,28 +18,27 @@
             z-index: -1;
         }
 
-        /* Corpo e formattazione principale */
+        /* Corpo e impostazione del contenuto */
         body {
             margin: 0;
             padding: 0;
-            overflow-x: hidden;
             display: flex;
             justify-content: flex-start;
             align-items: flex-start;
             height: 100vh;
+            overflow-x: hidden;
         }
 
+        /* Stili per la scritta "FORMÆFFIMERA" */
         .text-container {
             width: 100%;
+            overflow-wrap: break-word;
             padding: 20px;
             box-sizing: border-box;
-            position: fixed;
-            top: 0;
-            left: 0;
+            position: relative;
             z-index: 1;
         }
 
-        /* Formattazione scritta "FORMÆFFIMERA" (riferimento originale) */
         .fromaeffimera-text {
             font-family: 'Inter', sans-serif;
             font-weight: 400;
@@ -61,35 +46,28 @@
             color: black !important;
             text-transform: uppercase;
             white-space: normal;
-            line-height: normal; /* Imposta l'interlinea automatica */
         }
 
-        /* Modifica per tablet */
+        /* Media Query per schermi medi (tablet) */
         @media (max-width: 1024px) {
             .fromaeffimera-text {
                 font-size: 125pt;
-                line-height: normal;
-                position: absolute;
-                top: 10%;
-                left: 10%;
+                color: black !important;
             }
         }
 
-        /* Modifica per smartphone */
+        /* Media Query per schermi piccoli (cellulari) */
         @media (max-width: 768px) {
             .fromaeffimera-text {
                 font-size: 90pt;
-                line-height: normal;
-                position: absolute;
-                top: 15%;
-                left: 15%;
+                color: black !important;
             }
             .text-container {
                 padding: 10px;
             }
         }
 
-        /* Griglia desktop con celle quadrate */
+        /* Griglia con celle quadrate per le scritte bianche */
         .grid-overlay {
             position: relative;
             top: 0;
@@ -97,8 +75,8 @@
             width: 100%;
             height: 100vh;
             display: grid;
-            grid-template-columns: repeat(3, 1fr); /* 3 colonne fisse */
-            grid-auto-rows: calc(100vw / 3); /* Altezza quadrata */
+            grid-template-columns: repeat(3, 1fr);
+            grid-auto-rows: calc(100vw / 3);
             overflow-y: auto;
             overflow-x: hidden;
             z-index: 2;
@@ -106,14 +84,13 @@
             box-sizing: border-box;
         }
 
-        /* Scritte bianche per la griglia desktop */
         .grid-overlay div {
             display: flex;
             align-items: flex-start;
             justify-content: flex-start;
             padding: 10px;
             color: white;
-            font-family: 'Courier Prime Bold', monospace; /* Bold per desktop */
+            font-family: 'Courier Prime Bold', monospace;
             font-weight: bold;
             hyphens: auto;
             overflow-wrap: break-word;
@@ -123,24 +100,24 @@
         /* Griglia adattiva per tablet e smartphone */
         @media (max-width: 1024px) {
             .grid-overlay {
-                grid-template-columns: repeat(3, 1fr); /* Mantiene 3 colonne */
-                grid-auto-rows: auto; /* Altezza adattiva al contenuto */
+                grid-template-columns: repeat(3, 1fr);
+                grid-auto-rows: auto;
             }
             .grid-overlay div {
                 font-size: 18px;
-                font-family: 'Courier Prime Regular', monospace; /* Regular per tablet */
+                font-family: 'Courier Prime Regular', monospace;
                 font-weight: normal;
             }
         }
 
         @media (max-width: 768px) {
             .grid-overlay {
-                grid-template-columns: repeat(3, 1fr); /* Mantiene 3 colonne */
-                grid-auto-rows: auto; /* Altezza adattiva al contenuto */
+                grid-template-columns: repeat(3, 1fr);
+                grid-auto-rows: auto;
             }
             .grid-overlay div {
                 font-size: 26px;
-                font-family: 'Courier Prime Regular', monospace; /* Regular per smartphone */
+                font-family: 'Courier Prime Regular', monospace;
                 font-weight: normal;
             }
         }
@@ -160,33 +137,33 @@
 
     <!-- Griglia sovrapposta -->
     <div class="grid-overlay">
-        <div>doc01<br>documento primo</div>
-        <div>doc02<br>documento secondo</div>
-        <div>doc03<br>documento terzo</div>
-        <div>doc04<br>documento quarto</div>
-        <div>doc05<br>documento quinto</div>
-        <div>doc06<br>documento sesto</div>
-        <div>doc07<br>documento settimo</div>
-        <div>doc08<br>documento ottavo</div>
-        <div>doc09<br>documento nono</div>
-        <div>doc10<br>documento decimo</div>
-        <div>doc11<br>documento undicesimo</div>
-        <div>doc12<br>documento dodicesimo</div>
-        <div>doc13<br>documento tredicesimo</div>
-        <div>doc14<br>documento quattordicesimo</div>
-        <div>doc15<br>documento quindicesimo</div>
-        <div>doc16<br>documento sedicesimo</div>
-        <div>doc17<br>documento diciassettesimo</div>
-        <div>doc18<br>documento diciottesimo</div>
-        <div>doc19<br>documento diciannovesimo</div>
-        <div>doc20<br>documento ventesimo</div>
-        <div>doc21<br>documento ventunesimo</div>
-        <div>doc22<br>documento ventiduesimo</div>
-        <div>doc23<br>documento ventitreesimo</div>
-        <div>doc24<br>documento ventiquattresimo</div>
-        <div>doc25<br>documento venticinquesimo</div>
-        <div>doc26<br>documento ventiseiesimo</div>
-        <div>doc27<br>documento ventisettesimo</div>
+        <div>doc001<br>documento primo</div>
+        <div>doc002<br>documento secondo</div>
+        <div>doc003<br>documento terzo</div>
+        <div>doc004<br>documento quarto</div>
+        <div>doc005<br>documento quinto</div>
+        <div>doc006<br>documento sesto</div>
+        <div>doc007<br>documento settimo</div>
+        <div>doc008<br>documento ottavo</div>
+        <div>doc009<br>documento nono</div>
+        <div>doc010<br>documento decimo</div>
+        <div>doc011<br>documento undicesimo</div>
+        <div>doc012<br>documento dodicesimo</div>
+        <div>doc013<br>documento tredicesimo</div>
+        <div>doc014<br>documento quattordicesimo</div>
+        <div>doc015<br>documento quindicesimo</div>
+        <div>doc016<br>documento sedicesimo</div>
+        <div>doc017<br>documento diciassettesimo</div>
+        <div>doc018<br>documento diciottesimo</div>
+        <div>doc019<br>documento diciannovesimo</div>
+        <div>doc020<br>documento ventesimo</div>
+        <div>doc021<br>documento ventunesimo</div>
+        <div>doc022<br>documento ventiduesimo</div>
+        <div>doc023<br>documento ventitreesimo</div>
+        <div>doc024<br>documento ventiquattresimo</div>
+        <div>doc025<br>documento venticinquesimo</div>
+        <div>doc026<br>documento ventiseiesimo</div>
+        <div>doc027<br>documento ventisettesimo</div>
     </div>
 </body>
 </html>
