--- a/index.html
+++ b/index.html
@@ -185,5 +185,41 @@
         <div>doc26<br>documento ventiseiesimo</div>
         <div>doc27<br>documento ventisettesimo</div>
     </div>
+    <!-- Barra dei Social Media in basso centrata -->
+<div class="social-icons">
+    <a href="https://www.facebook.com/formaeffimera/" target="_blank">
+        <img src="img/facebook_b.png" alt="Facebook">
+    </a>
+    <a href="https://www.instagram.com/formaeffimera/" target="_blank">
+        <img src="img/intagram_b.png" alt="Instagram">
+    </a>
+    <a href="https://x.com/formaeffimera" target="_blank">
+        <img src="img/x_b.png" alt="X">
+    </a>
+    <a href="https://www.tiktok.com/@formaeffimera" target="_blank">
+        <img src="img/tiktok_b.png" alt="TikTok">
+    </a>
+    <a href="https://www.threads.net/@formaeffimera" target="_blank">
+        <img src="img/threads_b.png" alt="Threads">
+    </a>
+    <a href="https://www.youtube.com/@formaeffimera" target="_blank">
+        <img src="img/youtube_b.png" alt="YouTube">
+    </a>
+    <a href="https://vimeo.com/formaeffimera" target="_blank">
+        <img src="img/vimeo_b.png" alt="Vimeo">
+    </a>
+    <a href="https://bio.site/formaeffimera" target="_blank">
+        <img src="img/biosite_b.png" alt="Biosite">
+    </a>
+    <a href="https://linktr.ee/formaeffimera" target="_blank">
+        <img src="img/linktree_b.png" alt="Linktree">
+    </a>
+    <a href="https://www.linkedin.com/company/formaeffimera" target="_blank">
+        <img src="img/linkedin_b.png" alt="LinkedIn">
+    </a>
+    <a href="mailto:info@formaeffimera.com">
+        <img src="img/email_b.png" alt="Email">
+    </a>
+</div>
 </body>
 </html>
