--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div>doc26<br>documento ventiseiesimo</div>
         <div>doc27<br>documento ventisettesimo</div>
     </div>
-    <!-- Barra dei Social Media in basso centrata -->
+<!-- Barra dei Social Media centrata in basso e fissa -->
 <div class="social-icons">
     <a href="https://www.facebook.com/formaeffimera/" target="_blank">
         <img src="img/facebook_b.png" alt="Facebook">
@@ -212,6 +212,16 @@
         <img src="img/biosite_b.png" alt="Biosite">
     </a>
     <a href="https://linktr.ee/formaeffimera" target="_blank">
+        <img src="img/linktree_b.png" alt="Linktree">
+    </a>
+    <a href="https://www.linkedin.com/company/formaeffimera" target="_blank">
+        <img src="img/linkedin_b.png" alt="LinkedIn">
+    </a>
+    <a href="mailto:info@formaeffimera.com">
+        <img src="img/email_b.png" alt="Email">
+    </a>
+</div>
+a href="https://linktr.ee/formaeffimera" target="_blank">
         <img src="img/linktree_b.png" alt="Linktree">
     </a>
     <a href="https://www.linkedin.com/company/formaeffimera" target="_blank">
