--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
             font-weight: normal;
             font-style: normal;
         }
+        @font-face {
+            font-family: 'SocialMediaFont';
+            src: url('fonts/SocialMediaFont.ttf') format('truetype');
+            font-weight: normal;
+            font-style: normal;
+        }
 
         /* Video di sfondo */
         .background-video {
@@ -117,6 +123,14 @@
             text-align: left;
         }
 
+        /* Stile per le lettere social con font SocialMedia */
+        .social-icon {
+            font-family: 'SocialMediaFont';
+            font-size: inherit;
+            color: white;
+            text-decoration: none;
+        }
+
         /* Griglia adattiva per tablet e smartphone */
         @media (max-width: 1024px) {
             .grid-overlay {
@@ -183,7 +197,21 @@
         <div>doc24<br>documento ventiquattresimo</div>
         <div>doc25<br>documento venticinquesimo</div>
         <div>doc26<br>documento ventiseiesimo</div>
-        <div>doc27<br>documento ventisettesimo</div>
+        
+        <!-- Sostituzione di doc27 con lettere e collegamenti -->
+        <div>
+            <a href="https://www.facebook.com/formaeffimera/" target="_blank" class="social-icon">f</a>
+            <a href="https://www.instagram.com/formaeffimera/" target="_blank" class="social-icon">i</a>
+            <a href="https://x.com/formaeffimera" target="_blank" class="social-icon">x</a>
+            <a href="https://www.tiktok.com/@formaeffimera" target="_blank" class="social-icon">t</a>
+            <a href="https://www.threads.net/@formaeffimera" target="_blank" class="social-icon">a</a>
+            <a href="https://www.youtube.com/@formaeffimera" target="_blank" class="social-icon">y</a>
+            <a href="https://vimeo.com/formaeffimera" target="_blank" class="social-icon">v</a>
+            <a href="https://bio.site/formaeffimera" target="_blank" class="social-icon">b</a>
+            <a href="https://linktr.ee/formaeffimera" target="_blank" class="social-icon">k</a>
+            <a href="https://www.linkedin.com/company/formaeffimera" target="_blank" class="social-icon">n</a>
+            <a href="mailto:info@formaeffimera.com" target="_blank" class="social-icon">e</a><br>æ
+        </div>
     </div>
 </body>
 </html>
