--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             font-size: inherit;
             color: white;
             text-decoration: none;
+            padding: 0 2px;
         }
 
         /* Griglia adattiva per tablet e smartphone */
@@ -171,35 +172,7 @@
 
     <!-- Griglia sovrapposta -->
     <div class="grid-overlay">
-        <div>doc01<br>documento primo</div>
-        <div>doc02<br>documento secondo</div>
-        <div>doc03<br>documento terzo</div>
-        <div>doc04<br>documento quarto</div>
-        <div>doc05<br>documento quinto</div>
-        <div>doc06<br>documento sesto</div>
-        <div>doc07<br>documento settimo</div>
-        <div>doc08<br>documento ottavo</div>
-        <div>doc09<br>documento nono</div>
-        <div>doc10<br>documento decimo</div>
-        <div>doc11<br>documento undicesimo</div>
-        <div>doc12<br>documento dodicesimo</div>
-        <div>doc13<br>documento tredicesimo</div>
-        <div>doc14<br>documento quattordicesimo</div>
-        <div>doc15<br>documento quindicesimo</div>
-        <div>doc16<br>documento sedicesimo</div>
-        <div>doc17<br>documento diciassettesimo</div>
-        <div>doc18<br>documento diciottesimo</div>
-        <div>doc19<br>documento diciannovesimo</div>
-        <div>doc20<br>documento ventesimo</div>
-        <div>doc21<br>documento ventunesimo</div>
-        <div>doc22<br>documento ventiduesimo</div>
-        <div>doc23<br>documento ventitreesimo</div>
-        <div>doc24<br>documento ventiquattresimo</div>
-        <div>doc25<br>documento venticinquesimo</div>
-        <div>doc26<br>documento ventiseiesimo</div>
-        
-        <!-- Sostituzione di doc27 con lettere e collegamenti -->
-        <div>
+        <div>@formaeffimera<br>
             <a href="https://www.facebook.com/formaeffimera/" target="_blank" class="social-icon">f</a>
             <a href="https://www.instagram.com/formaeffimera/" target="_blank" class="social-icon">i</a>
             <a href="https://x.com/formaeffimera" target="_blank" class="social-icon">x</a>
@@ -210,7 +183,25 @@
             <a href="https://bio.site/formaeffimera" target="_blank" class="social-icon">b</a>
             <a href="https://linktr.ee/formaeffimera" target="_blank" class="social-icon">k</a>
             <a href="https://www.linkedin.com/company/formaeffimera" target="_blank" class="social-icon">n</a>
-            <a href="mailto:info@formaeffimera.com" target="_blank" class="social-icon">e</a><br>æ
+            <a href="mailto:info@formaeffimera.com" target="_blank" class="social-icon">e</a>
+        </div>
+
+        <!-- Altri elementi della griglia -->
+        <!-- ... -->
+
+        <!-- Sostituzione di doc27 con "@formaeffimera" e lettere social -->
+        <div>@formaeffimera<br>
+            <a href="https://www.facebook.com/formaeffimera/" target="_blank" class="social-icon">f</a>
+            <a href="https://www.instagram.com/formaeffimera/" target="_blank" class="social-icon">i</a>
+            <a href="https://x.com/formaeffimera" target="_blank" class="social-icon">x</a>
+            <a href="https://www.tiktok.com/@formaeffimera" target="_blank" class="social-icon">t</a>
+            <a href="https://www.threads.net/@formaeffimera" target="_blank" class="social-icon">a</a>
+            <a href="https://www.youtube.com/@formaeffimera" target="_blank" class="social-icon">y</a>
+            <a href="https://vimeo.com/formaeffimera" target="_blank" class="social-icon">v</a>
+            <a href="https://bio.site/formaeffimera" target="_blank" class="social-icon">b</a>
+            <a href="https://linktr.ee/formaeffimera" target="_blank" class="social-icon">k</a>
+            <a href="https://www.linkedin.com/company/formaeffimera" target="_blank" class="social-icon">n</a>
+            <a href="mailto:info@formaeffimera.com" target="_blank" class="social-icon">e</a>
         </div>
     </div>
 </body>
