--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            z-index: 0; /* Posiziona il testo sopra il video ma sotto la griglia */
+            z-index: 0;
             text-align: left;
         }
 
