--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@
     <div class="grid-overlay">
         <!-- Prima cella con @formaeffimera e lettere social -->
         <div>
-            <span style="overflow-wrap: break-word;">@formaeffimera</span>
+            <span class="social-text">
+                æ
+            </span>
             <span>
                 <a href="https://www.facebook.com/formaeffimera/" target="_blank" class="social-icon">f</a>
                 <a href="https://www.instagram.com/formaeffimera/" target="_blank" class="social-icon">i</a>
@@ -217,7 +219,9 @@
         <div>doc25<br>documento venticinquesimo</div>
         <div>doc26<br>documento ventiseiesimo</div>
         <div>
-            <span style="overflow-wrap: break-word;">@formaeffimera</span>
+            <span class="social-text">
+                æ
+            </span>
             <span>
                 <a href="https://www.facebook.com/formaeffimera/" target="_blank" class="social-icon">f</a>
                 <a href="https://www.instagram.com/formaeffimera/" target="_blank" class="social-icon">i</a>
