--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@
             text-decoration: none;
             padding: 0 3px;
         }
+
+        /* Stile per æ con il font SocialMediaFont */
+        .social-text {
+            font-family: 'SocialMediaFont';
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -172,11 +178,9 @@
 
     <!-- Griglia sovrapposta -->
     <div class="grid-overlay">
-        <!-- Prima cella con @formaeffimera e lettere social -->
+        <!-- Prima cella con æ e lettere social per smartphone, @formaeffimera per desktop/tablet -->
         <div>
-            <span class="social-text">
-                æ
-            </span>
+            <span class="social-text">æ</span>
             <span>
                 <a href="https://www.facebook.com/formaeffimera/" target="_blank" class="social-icon">f</a>
                 <a href="https://www.instagram.com/formaeffimera/" target="_blank" class="social-icon">i</a>
@@ -219,9 +223,7 @@
         <div>doc25<br>documento venticinquesimo</div>
         <div>doc26<br>documento ventiseiesimo</div>
         <div>
-            <span class="social-text">
-                æ
-            </span>
+            <span class="social-text">æ</span>
             <span>
                 <a href="https://www.facebook.com/formaeffimera/" target="_blank" class="social-icon">f</a>
                 <a href="https://www.instagram.com/formaeffimera/" target="_blank" class="social-icon">i</a>
