--- a/index.html
+++ b/index.html
@@ -222,22 +222,7 @@
         <div>doc24<br>documento ventiquattresimo</div>
         <div>doc25<br>documento venticinquesimo</div>
         <div>doc26<br>documento ventiseiesimo</div>
-        <div>
-            <span class="social-text">æ</span>
-            <span>
-                <a href="https://www.facebook.com/formaeffimera/" target="_blank" class="social-icon">f</a>
-                <a href="https://www.instagram.com/formaeffimera/" target="_blank" class="social-icon">i</a>
-                <a href="https://x.com/formaeffimera" target="_blank" class="social-icon">x</a>
-                <a href="https://www.tiktok.com/@formaeffimera" target="_blank" class="social-icon">t</a>
-                <a href="https://www.threads.net/@formaeffimera" target="_blank" class="social-icon">a</a>
-                <a href="https://www.youtube.com/@formaeffimera" target="_blank" class="social-icon">y</a>
-                <a href="https://vimeo.com/formaeffimera" target="_blank" class="social-icon">v</a>
-                <a href="https://bio.site/formaeffimera" target="_blank" class="social-icon">b</a>
-                <a href="https://linktr.ee/formaeffimera" target="_blank" class="social-icon">k</a>
-                <a href="https://www.linkedin.com/company/formaeffimera" target="_blank" class="social-icon">n</a>
-                <a href="mailto:info@formaeffimera.com" class="social-icon">e</a>
-            </span>
-        </div>
+        <div>doc27<br>documento ventisettsimo</div>
     </div>
 </body>
 </html>
