--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <div>doc24<br>documento ventiquattresimo</div>
         <div>doc25<br>documento venticinquesimo</div>
         <div>doc26<br>documento ventiseiesimo</div>
-        <div>doc27<br>documento ventisettsimo</div>
+        <div>doc27<br>documento ventisettesimo</div>
     </div>
 </body>
 </html>
