--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="grid-overlay">
         <!-- Prima cella con æ e lettere social per smartphone, @formaeffimera per desktop/tablet -->
         <div>
-            <span class="social-text">æ</span>
+            <span class="social-text">[</span>
             <span>
                 <a href="https://www.facebook.com/formaeffimera/" target="_blank" class="social-icon">f</a>
                 <a href="https://www.instagram.com/formaeffimera/" target="_blank" class="social-icon">i</a>
