--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             padding: 0 3px;
         }
 
-        /* Stile per [ con il font SocialMediaFont */
+        /* Stile per æ con il font SocialMediaFont */
         .social-text {
             font-family: 'SocialMediaFont';
             color: white;
@@ -182,7 +182,7 @@
 
     <!-- Griglia sovrapposta -->
     <div class="grid-overlay">
-        <!-- Prima cella con [ per desktop/tablet, æ per smartphone -->
+        <!-- Prima cella con æ per smartphone, [ per desktop/tablet -->
         <div>
             <span class="social-text">[</span>
             <span>
