--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             .text-container {
                 padding: 10px;
             }
-            /* Cambia il contenuto del carattere per smartphone */
+            /* Sostituisci completamente il carattere con æ */
             .social-text::before {
                 content: "æ";
             }
@@ -161,7 +161,7 @@
             padding: 0 3px;
         }
 
-        /* Stile per æ con il font SocialMediaFont */
+        /* Stile per il carattere social */
         .social-text {
             font-family: 'SocialMediaFont';
             color: white;
